# world-cup-forecasting-platform

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
configs/: example_tournament.yaml  world_cup_2026.yaml
data/processed/: .gitkeep
data/raw/: .gitkeep
reports/: final_report.md  model_card.md
reports/metrics/: baseline_validation_metrics.csv  calibration_validation_metrics.csv  final_test_metrics.csv
reports/predictions/: final_test_predictions.csv
reports/simulations/: example_tournament_simulation.csv  model_backed_example_simulation.csv
scripts/: build_elo_features.py  build_features.py  calibrate_model.py  evaluate_baselines.py  evaluate_final_model.py  prepare_data.py  run_model_simulation.py  run_simulation.py
src/wc_forecast/api/: main.py  schemas.py  service.py
src/wc_forecast/dashboard/: app.py
src/wc_forecast/data/: clean.py  features.py  split.py
src/wc_forecast/models/: baselines.py  calibration.py  evaluate.py  final_evaluation.py  plots.py  sklearn_models.py
src/wc_forecast/ratings/: elo.py
src/wc_forecast/simulation/: config.py  group_stage.py  knockout.py  match.py  model_provider.py  tournament.py
tests/: test_api.py  test_baselines.py  test_calibration.py  test_data_pipeline.py  test_elo.py  test_features.py  test_final_evaluation.py  test_model_provider.py  test_simulation.py  test_simulation_config.py  test_sklearn_models.py
