[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "world-cup-forecasting-platform"
version = "0.1.0"
description = "Probabilistic forecasting and simulation platform for international football tournaments."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Federico García Valenzuela" }
]

dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "pyyaml>=6.0.0",
  "matplotlib>=3.7.0",
  "fastapi>=0.100.0",
  "uvicorn>=0.23.0",
  "pydantic>=2.0.0",
  "streamlit>=1.25.0",
  "requests>=2.31.0",
  "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "ruff>=0.1.0",
  "mypy>=1.5.0",
  "ipykernel>=6.0.0",
  "jupyter>=1.0.0",
]

models = [
  "xgboost>=2.0.0",
  "lightgbm>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
